--- a/todos-list/public/index.html
+++ b/todos-list/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Todo's List</title>
+    <title>© Luiz's List of Todos</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
